[package]
name = "liblinear"
version = "1.0.0"
authors = ["Madeesh Kannan"]

build = "build.rs"
links = "liblinear.a"

readme = "README.md"
description = "Rust bindings for the liblinear C++ library"
repository = "https://github.com/shadeMe/liblinear-rs"
keywords = ["machine-learning", "statistics", "svm", "linear-model"]
categories = ["api-bindings", "science", "simulation"]
license = "MIT"

[dependencies]
failure = "0.1.6"
parsnip = "0.3.0"
approx = "0.3.2"

[build-dependencies]
cc = "1.0.46"