[package]
name = "liblinear-macros"
version = "0.1.0"
authors = ["Madeesh Kannan"]
edition = "2021"

readme = "README.md"
description = "Macros for the `liblinear` crate"
repository = "https://github.com/shadeMe/liblinear-rs"
keywords = ["machine-learning", "statistics", "svm", "linear-model"]
categories = ["api-bindings", "science", "simulation"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
